--- a/app/src/main/res/values-pt-rBR/help.xml
+++ b/app/src/main/res/values-pt-rBR/help.xml
@@ -154,14 +154,14 @@
         <p>Este é o endereço público da carteira na qual você está enviando Monero. Você pode colar da sua área de transferência,
         escanear um código QR ou escrevê-lo manualmente. Verifique-o múltiplas vezes para garantir que você não está enviando
         Monero para o endereço errado.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>Além de enviar para um endereço XMR, você também pode enviar para
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>um OpenAlias para XMR ou BTC</li>
+            <li>um endereço BTC</li>
+            <li>um URI bitcoin: (incluindo o BIP70 usado em serviços como o bitpay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+        Observe que o envio de BTC é processado pelo serviço XMR.TO (veja https://xmr.to para detalhes).
+        Consulte a seção sobre envio de BTC abaixo.</p>
         <h2>ID do Pagamento</h2>
         <p>Você pode usar o ID do Pagamento para identificar a razão pela qual você transacionou com a contraparte.
         Essa opção é opcional e privada. Por exemplo, lojistas podem reconciliar o seu pagamento com
