--- a/app/src/main/res/values-pt-rBR/help.xml
+++ b/app/src/main/res/values-pt-rBR/help.xml
@@ -154,14 +154,14 @@
         <p>Este é o endereço público da carteira na qual você está enviando Monero. Você pode colar da sua área de transferência,
         escanear um código QR ou escrevê-lo manualmente. Verifique-o múltiplas vezes para garantir que você não está enviando
         Monero para o endereço errado.</p>
-        <p>In addition to using an XMR address, you can also use
+        <p>Além de enviar para um endereço XMR, você também pode enviar para
         <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+            <li>um OpenAlias para XMR ou BTC</li>
+            <li>um endereço BTC</li>
+            <li>um URI bitcoin: (incluindo o BIP70 usado em serviços como o bitpay)</li>
         </u>
-        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
+        Observe que o envio de BTC é processado pelo serviço XMR.TO (veja https://xmr.to para detalhes).
+        Consulte a seção sobre envio de BTC abaixo.</p>
         <h2>ID do Pagamento</h2>
         <p>Você pode usar o ID do Pagamento para identificar a razão pela qual você transacionou com a contraparte.
         Essa opção é opcional e privada. Por exemplo, lojistas podem reconciliar o seu pagamento com
@@ -291,15 +291,15 @@
     <!-- Note for translators: new/changed text also in help_send -->
 
     <string name="help_uri"><![CDATA[
-        <h1>Using a payment link</h1>
-        <p>You have started monerujo with a payment link. In order to send funds, please do the following:</p>
+        <h1>Usando um link de pagamento</h1>
+        <p>Você abriu o monerujo a partir de um link de pagamento. Para enviar os fundos, siga estes passos:</p>
         <p>
-        1. Open the wallet you want to spend from<br>
-        2. Wait until the wallet is synced &amp; the "Give" button appears<br>
-        3. Touch the "Give" button
+        1. Abra a carteira da qual você quer gastar<br>
+        2. Espere que a carteira esteja sincronizada &amp; o botão "Enviar" vai aparecer<br>
+        3. Toque no botão "Enviar"
         </p>
-        <p>The payment details will be filled in. Check them and proceed like for any other transaction.</p>
+        <p>Os detalhes do pagamento serão preenchidos. Confirme-os e siga adiante como qualquer outra transação normal.</p>
     ]]></string>
 
-    <string name="help_ok">Got it!</string> <!-- Note: "Got it" as in "I understand this" -->
+    <string name="help_ok">Entendi!</string> <!-- Note: "Got it" as in "I understand this" -->
 </resources>
