Update help.xml 2019-5-11
Hi, I add changes on line 200, based on lafudoci's review, thanks.

--- a/app/src/main/res/values-zh-rCN/help.xml
+++ b/app/src/main/res/values-zh-rCN/help.xml
@@ -197,7 +197,7 @@
 
     <string name="help_node"><![CDATA[
         <h1>节点</h1>
-        <h2>该文较长</h2>
+        <h2>以下是精简版的说明</h2>
         <p>下拉以刷新节点列表 &amp; 书签 3&#8211;你可以在5个节点中选择最适合的一个！</p>
         <h2>什么是节点？</h2>
         <p>Monerujo使用远程节点来与Monero区块链通信，无需下载和储存全部的区块链数据。<p>
