--- a/app/src/main/res/xml/usb_device_filter.xml
+++ b/app/src/main/res/xml/usb_device_filter.xml
@@ -6,4 +6,9 @@
         product-id="1"
         vendor-id="11415" />
 
+    <!-- Ledger Nano X HID: VID=0x2C97 PID=0x0004 -->
+    <usb-device
+        product-id="4"
+        vendor-id="11415" />
+
 </resources>
