--- a/app/src/main/res/layout/fragment_send_amount.xml
+++ b/app/src/main/res/layout/fragment_send_amount.xml
@@ -27,35 +27,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:paddingEnd="12dp"
             android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             android:src="@drawable/ic_all_inclusive_24dp"
             android:visibility="visible" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/llAmount"
+    <com.m2049r.xmrwallet.widget.ExchangeEditText
+        android:id="@+id/etAmount"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <com.m2049r.xmrwallet.widget.ExchangeTextView
-            android:id="@+id/evAmount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:orientation="vertical" />
-
-        <com.m2049r.xmrwallet.widget.NumberPadView
-            android:id="@+id/numberPad"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:gravity="center" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical" />
 
     <RelativeLayout
         android:id="@+id/rlSweep"
