--- a/app/src/main/res/layout/view_exchange_edit.xml
+++ b/app/src/main/res/layout/view_exchange_edit.xml
@@ -18,8 +18,8 @@
             android:gravity="center"
             android:textAlignment="center" />
 
-        <TextView
-            android:id="@+id/tvAmountA"
+        <EditText
+            android:id="@+id/etAmountA"
             style="@style/MoneroText.Balance.Orange"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -27,10 +27,12 @@
             android:layout_marginStart="16dp"
             android:layout_weight="3"
             android:hint="@string/send_amount_hint"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
             android:padding="4dp"
             android:singleLine="true"
+            android:textAlignment="textStart"
             tools:text="87.00000" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -66,8 +68,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginEnd="0sp"
-            android:layout_marginStart="8sp">
+            android:layout_marginStart="8sp"
+            android:layout_marginEnd="0sp">
 
             <ImageView
                 android:id="@+id/evExchange"
