use kraken for EURXMR exchange rate combine with ECB rates for other fiat conversions

--- a/app/src/main/res/layout/fragment_send_btc_amount.xml
+++ b/app/src/main/res/layout/fragment_send_btc_amount.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -53,11 +54,12 @@
         </LinearLayout>
     </FrameLayout>
 
-    <com.m2049r.xmrwallet.widget.ExchangeBtcEditText
+    <com.m2049r.xmrwallet.widget.ExchangeOtherEditText
         android:id="@+id/etAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="vertical" />
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:baseSymbol="BTC" />
 </LinearLayout>
