--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,4 +7,7 @@
         <attr name="activeDot" format="integer" />
         <attr name="numberDots" format="integer" />
     </declare-styleable>
+    <declare-styleable name="ExchangeEditText">
+        <attr name="baseSymbol" format="string" />
+    </declare-styleable>
 </resources>
