--- a/app/src/main/res/values-cat/about.xml
+++ b/app/src/main/res/values-cat/about.xml
@@ -19,19 +19,19 @@
          ús i divulgació de la informació personal que rebem dels usuaris de la nostra
          aplicació (monerujo: Monero Wallet).
         </p>
-        <p>Mitjançant l'ús d'aquesta aplicació vostè accepta la recopilació i l’ús de la informació d’acord amb aquesta política.
+        <p>Mitjançant l’ús d’aquesta aplicació vostè accepta la recopilació i l’ús de la informació d’acord amb aquesta política.
         </p>
         <h2>Dades Recopilades</h2>
         <p>Les dades personals són qualsevol tipus de dades que puguin identificar un individu.
         </p>
         <p>Les claus i les adreces públiques de Monero són recollides i processades per l’aplicació de forma local per tal de processar les transaccions i transmetre-les 	a la 	xarxa Monero de forma encriptada.
         </p>
-        <p>L'aplicació no recopila altres dades personals.</p>
-        <p>Si utilitzeu la funcionalitat d'intercanvi (opcional), monerujo obté el canvi
+        <p>L’aplicació no recopila altres dades personals.</p>
+        <p>Si utilitzeu la funcionalitat d’intercanvi (opcional), monerujo obté el canvi
          a través de l’API pública de coinmarketcap.com.
          Consulteu la seva política de privacitat a https://coinmarketcap.com/privacy per a més detalls sobre com es recullen les dades de les vostres peticions</p>
         <p>Si utilitzeu l’aplicació per pagar a adreces BTC, utilitzareu el servei XMR.TO.
-         Consulteu la seva política de privacitat a https://xmr.to/ per obtenir més informació. Monerujo els envia l'adreça de destinació de BTC i la quantitat. La 	vostra IP 	també podrà ser recollida.</p>
+         Consulteu la seva política de privacitat a https://xmr.to/ per obtenir més informació. Monerujo els envia l’adreça de destinació de BTC i la quantitat. La 	vostra IP 	també podrà ser recollida.</p>
         <h2>Permisos de la App</h2>
         <ul>
         <li>INTERNET : Connectar a la xarxa Monero mitjançant un Node Daemon de Monero</li>
