--- a/app/src/main/res/values-cat/help.xml
+++ b/app/src/main/res/values-cat/help.xml
@@ -10,7 +10,7 @@
          Aquestes són les úniques dades necessàries per a recuperar el vostre portamonedes i obtenir accés total als vostres fons.
          Mantenir-la segura i privada és molt important ja que permet que <em> qualsevol persona</em> tingui accés total als vostres fons!.</p>
         <p>Si perdeu la contrasenya del portamonedes encara podrieu recuperar-lo amb la llavor Mnemotècnica.</p>
-        <p>La llavor Mnemotècnica tampoc no es pot canviar mai, i si és robada o compromesa d'alguna manera haureu de traslladar els vostres fons a un nou portamonedes (amb una nova 	llavor mnemotècnica). Per tant, es recomana que feu còpies de seguretat de la vostra llavor mnemotècnica escrivint-la i emmagatzemant-la a <em> múltiple </em> llocs de forma 	segura.</p>
+        <p>La llavor Mnemotècnica tampoc no es pot canviar mai, i si és robada o compromesa d’alguna manera haureu de traslladar els vostres fons a un nou portamonedes (amb una nova 	llavor mnemotècnica). Per tant, es recomana que feu còpies de seguretat de la vostra llavor mnemotècnica escrivint-la i emmagatzemant-la a <em> múltiple </em> llocs de forma 	segura.</p>
     ]]></string>
 
     <string name="help_create_seed"><![CDATA[
@@ -19,7 +19,7 @@
         <p>Introduïu un nom i contrasenya únics del portamonedes.
          La contrasenya s’utilitza per protegir les dades del seu portamonedes en el dispositiu. Utilitzeu una contrasenya sòlida - encara millor si utiliza una frase.</p>
         <p>Introduïu la Llavor en el camp \"Llavor Mnemotècnica\".<p>
-        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d'haver fer servir aquesta adreça del portamonedes.</p>
+        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d’haver fer servir aquesta adreça del portamonedes.</p>
     ]]></string>
 
     <string name="help_create_ledger"><![CDATA[
@@ -27,7 +27,7 @@
         <p>Si voleu recuperar el vostre portamonedes desde un dispositiu Ledger Nano S!</p>
         <p>Les vostres claus secretes no surten mai del dispositiu Ledger, de manera que necessiteu que estigui connectat sempre que vulgueu accedir aal vostre portamonedes.</p>
         <p>Introduïu un nom i contrasenya únics del portamonedes. La contrasenya s’utilitza per protegir les dades de la seva cartera al dispositiu Android. Utilitzeu una 		contrasenya sòlida - encara millor si utiliza una frase.</p>
-        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d'haver fer servir aquesta adreça del portamonedes.</p>
+        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d’haver fer servir aquesta adreça del portamonedes.</p>
     ]]></string>
 
     <string name="help_create_keys"><![CDATA[
@@ -36,7 +36,7 @@
         <p>Introduïu un nom i contrasenya únics del portamonedes. La contrasenya s’utilitza per protegir les dades de la seva cartera al dispositiu. Utilitzeu una contrasenya sòlida 	- encara millor si utiliza una frase.<p>
         <p>Introduïu la vostra Adreça Monero en el camp \"Adreça Pública\" i ompliu \"Clau de Visualització\" i  \"Clau de Despesa\" </p>
         <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el
-         camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d'haver 	fer servir aquesta adreça del portamonedes.</p>
+         camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d’haver 	fer servir aquesta adreça del portamonedes.</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
@@ -44,7 +44,7 @@
         <p>Si només voleu monitoritzar les transaccions entrants del portamonedes!</p>
         <p>Introduïu un nom i contrasenya únics del portamonedes. La contrasenya s’utilitza per protegir les dades de la seva cartera al dispositiu. Utilitzeu una contrasenya sòlida 	- encara millor si utiliza una frase.<p>
         <p>Introduïu la vostra Adreça Monero en el camp \"Adreça Pública\" i ompliu \"Clau de Visualització\".</p>
-        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d'haver fer servir aquesta adreça del portamonedes.</p>
+        <p>Introduïu el número de bloc de la primera transacció realitzada en aquesta adreça en el camp "Restaurar Alçada". També podeu utilitzar una data en el format AAAA-MM-DD. 	Si no esteu segurs, introduïu una data / alçada de bloc aproximada <em> abans </em> d’haver fer servir aquesta adreça del portamonedes.</p>
     ]]></string>
 
     <string name="help_details"><![CDATA[
@@ -54,14 +54,14 @@
         <h2>Clau Mnemotècnica</h2>
        	Aquestes són les úniques dades necessàries per a recuperar el vostre portamonedes i obtenir accés total als vostres fons.
          Mantenir-la segura i privada és molt important ja que permet que <em> qualsevol persona</em> tingui accés total als vostres fons! Si no us heu escrit en cap lloc segur, 	feu-ho!
-        <h2>Contrasenya de Recuperació d'Arxius del Portamonedes</h2>
+        <h2>Contrasenya de Recuperació d’Arxius del Portamonedes</h2>
 	Assegureu-vos que heu escrit aquesta contrasenya. Si restabliu el dispositiu o desinstal·leu l’aplicació, la necessitarà per tornar a accedir al seu portamonedes.<br/>
         <h3>CrAzYsenya</h3>
         Si la contrasenya que es mostra aquí és de 52 caràcters alfanumèrics en grups de 4 - felicitats!
         Els fitxers del portamonedes estan protegits amb una clau de 256 bits generada per la funció de seguretat del vostre dispositiu basades en la contrasenya que heu triat 	(durant la creació o al canviar-la). Això ho fa extremadament difícil de piratejar!<br/>
       	Aquesta opció és obligatoria per a tots els nous portamonedes.
         <h3>Contrasenya de Llegat</h3>
-	Si veieu la vostra contrasenya aquí, els fitxers del portamonedes no estan tan segurs com quan s'utilitza la CrAzYsenya. Per solucionar-ho, seleccioneu \"Canviar 		Contrasenya\" des del menú. Després d'entrar una nova contrasenya (potser fins i tot la mateixa que abans) l’aplicació generarà una CrAzYsenya per a protegir els vostres 	arxius del portamonedes. Anoteu-la!
+	Si veieu la vostra contrasenya aquí, els fitxers del portamonedes no estan tan segurs com quan s’utilitza la CrAzYsenya. Per solucionar-ho, seleccioneu \"Canviar 		Contrasenya\" des del menú. Després d’entrar una nova contrasenya (potser fins i tot la mateixa que abans) l’aplicació generarà una CrAzYsenya per a protegir els vostres 	arxius del portamonedes. Anoteu-la!
         <h3>CrAzYsenya del Portamonedes</h3>
 	Si mai necessiteu tornar a instal·lar Monerujo (per exemple, després de restablir el telèfon o canviar-lo per un de nou) o voleu utilitzar els arxius del portamonedes en un 	altre dispositiu o PC, cal que ho feu utilitzant aquesta Contrasenya de Recuperació (CrAzYsenya) per tornar a accedir al vostre portamonedes. <br/>
         En seleccionar \"Canviar Contrasenya\" des del menú, podeu triar una nova contrasenya. Aneu amb compte que això generarà una nova Contrasenya de Recuperació (CrAzYsenya). 	Anoteu-la!
@@ -76,10 +76,10 @@
         <h2>Node</h2>
         <p>Monerujo utilitza un node remot per comunicar-se amb la xarxa Monero sense necessitat
          de descarregar i emmagatzemar una còpia de tota la blockchain sencera. Podeu trobar una llista dels nodes remots més populars o aprendre a configurar el vostre propi node 	remot aquí https://moneroworld.com/<p>
-        <p>Monerujo té alguns Nodes remots incorporats. Se'n recorda dels últims cinc nodes empleats.</p>
+        <p>Monerujo té alguns Nodes remots incorporats. Se’n recorda dels últims cinc nodes empleats.</p>
         <h2>Portamonedes</h2>
         <p>Aquí podeu veure els portamonedes. Es troben a la carpeta <tt> monerujo </tt>
-         dins l’emmagatzematge intern del dispositiu. Podeu utilitzar una aplicació d’exploració d'arxius per veure'ls. Haurieu de fer còpies de seguretat d’aquesta carpeta de 	manera regular en un emmagatzematge extern al dispositiu en cas que el vostre dispositiu exploti o el robin.</p>
+         dins l’emmagatzematge intern del dispositiu. Podeu utilitzar una aplicació d’exploració d’arxius per veure’ls. Haurieu de fer còpies de seguretat d’aquesta carpeta de 	manera regular en un emmagatzematge extern al dispositiu en cas que el vostre dispositiu exploti o el robin.</p>
         <p>Seleccioneu una portamonedes per obrir-lo o premeu el botó "+" per crear-ne un de nou.
          O seleccioneu una de les operacions del portamonedes:</p>
         <h3>Detalls</h3>
@@ -92,13 +92,13 @@
         <p>Feu una còpia del portamonedes en la carpeta <tt> backups </tt> dins del <tt> monerujo </tt>
          per a sobreescriure còpies anteriors.</p>
         <h3>Arxiu</h3>
-        <p>Feu una còpia de seguretat i a continuació elimineu el portamonedes. La còpia es mantindrà a la carpeta <tt> backups </tt>. Si ja no necessiteu les vostres còpies de 	seguretat les haureu d’eliminar amb un explorador d'arxius o una aplicació segura.</p>
+        <p>Feu una còpia de seguretat i a continuació elimineu el portamonedes. La còpia es mantindrà a la carpeta <tt> backups </tt>. Si ja no necessiteu les vostres còpies de 	seguretat les haureu d’eliminar amb un explorador d’arxius o una aplicació segura.</p>
     ]]></string>
 
     <string name="help_tx_details"><![CDATA[
         <h1>Detalls de Transacció</h1>
         <h2>Destí</h2>
-        Aquesta és l'adreça pública del portamonedes on esteu enviant els Monero.
+        Aquesta és l’adreça pública del portamonedes on esteu enviant els Monero.
         <h2>ID de Pagament</h2>
 	Podeu utilitzar un ID de pagament per identificar el motiu pel qual heu enviat a Monero entre dues parts. Això és totalment opcional i privat. Per exemple, això pot permetre 	a una empresa associar la transacció amb un article que heu comprat.
         <h2>ID de Transacció</h2>
@@ -112,7 +112,7 @@
     <string name="help_send"><![CDATA[
         <h1>Enviar</h1>
         <h2>Adreça del Receptor</h2>
-        <p>Aquesta és l'adreça pública del portamonedes a la qual esteu enviant Moneroj. Podeu copiar-la al porta-retalls, escanejar un codi QR o introduir-la manualment. Assegureu-	vos de confirmar-ho a consciencia i que no estigueu enviant monedes a la direcció incorrecta.</p>
+        <p>Aquesta és l’adreça pública del portamonedes a la qual esteu enviant Moneroj. Podeu copiar-la al porta-retalls, escanejar un codi QR o introduir-la manualment. Assegureu-	vos de confirmar-ho a consciencia i que no estigueu enviant monedes a la direcció incorrecta.</p>
         <p>A més d’utilitzar una adreça XMR, també podeu utilitzar
         <ul>
             <li>un OpenAlias per XMR o BTC</li>
@@ -125,7 +125,7 @@
         <h1>Enviant BTC</h1>
         <h2>XMR.TO</h2>
         <p>XMR.TO és un servei de tercers que fa proporciona el canvi de Monero a Bitcoin.
-         Nosaltres fem servir l'API XMR.TO per integrar els pagaments de Bitcoin a Monerujo. Si us plau, doneu un cop d'ull a https://xmr.to i decidiu vosaltres mateixos si és una 	cosa que volgueu utilitzar. L'equip de 	Monerujo no està associat amb XMR.TO i no pot oferir assistència amb el seu servei.</p>
+         Nosaltres fem servir l’API XMR.TO per integrar els pagaments de Bitcoin a Monerujo. Si us plau, doneu un cop d’ull a https://xmr.to i decidiu vosaltres mateixos si és una 	cosa que volgueu utilitzar. L’equip de 	Monerujo no està associat amb XMR.TO i no pot oferir assistència amb el seu servei.</p>
         <h2>Tipus de Canvi XMR.TO<h2>
         <p>A la pantalla \"Quantitat\" es mostraran els paràmetres actuals del servei XMR.TO. Aquests
          inclouen el tipus de canvi actual, així com els límits de BTC superiors i inferiors. Tingueu en compte que la tarifa no està garantida en aquell mateix moment. També veureu
@@ -147,7 +147,7 @@
         <h1>Enviant BTC</h1>
         <h2>XMR.TO</h2>
         <p>XMR.TO és un servei de tercers que fa proporciona el canvi de Monero a Bitcoin.
-         Nosaltres fem servir l'API XMR.TO per integrar els pagaments de Bitcoin a Monerujo. Si us plau, doneu un cop d'ull a https://xmr.to i decidiu vosaltres mateixos si és una 	cosa que volgueu utilitzar. L'equip de 	Monerujo no està associat amb XMR.TO i no pot oferir assistència amb el seu servei.</p>
+         Nosaltres fem servir l’API XMR.TO per integrar els pagaments de Bitcoin a Monerujo. Si us plau, doneu un cop d’ull a https://xmr.to i decidiu vosaltres mateixos si és una 	cosa que volgueu utilitzar. L’equip de 	Monerujo no està associat amb XMR.TO i no pot oferir assistència amb el seu servei.</p>
         <h2>Tipus de Canvi XMR.TO<h2>
         <p>A la pantalla \"Quantitat\" es mostraran els paràmetres actuals del servei XMR.TO. Aquests
          inclouen el tipus de canvi actual, així com els límits de BTC superiors i inferiors. Tingueu en compte que la tarifa no està garantida en aquell mateix moment. També veureu
@@ -170,7 +170,7 @@
         <h2>Mode de carrer</h2>
         <p>El mode de carrer es pot habilitar / desactivar des del menú o a la icona principal de Gunther. En aquest mode, el vostre balanç no es mostra a cap pantalla perquè pugueu 	utilitzar la vostra cartera amb seguretat al carrer, al pub o qualsevol lloc públic. Les transaccions anteriors també estan ocultes. Es mostraran les noves transaccions 	perquè pogueu veure que heu enviat / rebut els vostres estimats Moneroj!</p>
         <h2>Escanejant</h2>
-        Perquè a Monero li agrada mantenir les coses privades, cada cop que obri un portamonedes Monerujo hem d'escanejar la blockchain per veure si s'han enviat nous moneroj al seu 	portamonedes. Això només emmagatzema l'informació al telèfon que pertany al seu portamonedes. De vegades pot trigar una estona perquè no s’ha sincronitzat en molt de temps.
+        Perquè a Monero li agrada mantenir les coses privades, cada cop que obri un portamonedes Monerujo hem d’escanejar la blockchain per veure si s’han enviat nous moneroj al seu 	portamonedes. Això només emmagatzema l’informació al telèfon que pertany al seu portamonedes. De vegades pot trigar una estona perquè no s’ha sincronitzat en molt de temps.
         <h2>El Balanç</h2>
         <p><b>Ajuda! El balanç del meu portamonedes ha desaparegut o consta com a no confirmat!</b><br/>
         No patiu! Quan envieu fons desde el vostre portamonedes part del balanç apareixerà com a no confirmat de forma temporal.        
@@ -199,8 +199,8 @@
          es mostra al costat de cada node.</p>
         <p>Es pot marcar qualsevol node de la llista per utilitzar-lo més endevant.
          Es descartaràn els nodes que no hagin estat seleccionats.<p>
-        <p>Monerujo escollirà el node òptim (marcat) cada vegada que l'utilitzeu.
-         Això ho fa mitjançant la comprovació de l'alçada de bloc (com d'actualitzat
+        <p>Monerujo escollirà el node òptim (marcat) cada vegada que l’utilitzeu.
+         Això ho fa mitjançant la comprovació de l’alçada de bloc (com d’actualitzat
          està el node?), així com el temps de resposta (què tan ràpidament respon el node a les peticions?).</p>
         <p>La llista s’ordena per aquestes característiques, de manera que el node superior seria el que Monerujo
          triaria ara mateix. La part inferior de la llista mostraria els nodes més lents o no disponibles.</p>
@@ -209,15 +209,15 @@
         que introduïu els detalls del node al següent diàleg.
         El &quot;Adreça&quot; és el nom del servidor o adreça IP del node - aquesta és la única
         entrada obligatòria.
-        Introduïu el &quot;Port&quot; si el node s'executa en un port no predeterminat (per exemple, 18089).
+        Introduïu el &quot;Port&quot; si el node s’executa en un port no predeterminat (per exemple, 18089).
         També podeu anomenar opcionalment el node, de manera que el pugueu identificar més fàcilment més endavant.
         Alguns nodes necessiten credencials per utilitzar-los. Introduïu el nom d’usuari i
         contrasenya proporcionats als camps corresponents. Ara podeu &quot;Test&quot; aquesta configuració.
-        Els &quot;Resultats de les Proves&quot; mostraran l'alçada de bloc, el temps de resposta i l'IP real.
+        Els &quot;Resultats de les Proves&quot; mostraran l’alçada de bloc, el temps de resposta i l’IP real.
         El resultat també pot ser un error - generalment perquè el nom del servidor proporcionat no és
-        accessible dins d'un temps raonable o les credencials són incorrectes.
+        accessible dins d’un temps raonable o les credencials són incorrectes.
         O la combinació de nom del servidor/port no apunta cap a un node real de Monero!
-        Un cop aprovada la prova (sense error), ja estás llest per prémer &quot;D'acord&quot; per desar iamp;
+        Un cop aprovada la prova (sense error), ja estás llest per prémer &quot;D’acord&quot; per desar iamp;
         marcar aquest node.</p>
         <h2>Escanejar Nodes</h2>
         <p>A més, podeu escanejar la xarxa per buscar nodes. Monerujo començarà
